# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xjY35ly73Zh_BK8TxNgMxrhwVtTXKa9SKxPU3_aGgCIg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1gPB2pQqkUA8W8hWxyfFQm1w4wouRQNnEO1N3umYnQiM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1VAiAASuopPFL59d0m8Of6KalBcT5B-G-4V8Cu0f6bZA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xS0z-vYnK7ZqZrZXUHLb9gIAKw2XWK8byRn0dG7avf8A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1fhJs8jH5s4E1YXrZ5ddMrCk_wRytcZEqj3yQlYrqwWs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1cn7gGDnc03Q38a5kOXewnZ27v03CtoJ89F7U9nfk_OA=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1uy8glr5dRs2Kszonb5S_eFf4y_J7JqPrUG7hYyySwec=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT20J3qbVudPx6eTalXjH7F0HzuFYlhQF2Q-JfTmEhvquw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2N2WXebtMNwP1QCK43x9O9MewZOtEWTYMST8Z2brhR14=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2Y1x18-NrEKbU_krEnmNXKcvni83mcUSsI7WaXEZkN0k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2aHYNtdwjBaaVetPaNd6gQ2eaeviyKQBgqh84qvfw0EA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2tDV4qlXRgI9Lqua4DMh-cJhz-RTSsBsWJD87sVBXELQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT17DlGAgi69FxmUO2aFiGZWcwAZGtSK5KYJuoPr54vhl0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1CbzqcRAwFcOgvEo_Ve2SIN7p-BulshTa--nqmUgRyCw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1KO_nRJ5auQmHT6OwrffAq5_A7dCnSPEolwZdFsS89W8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1cBiXnNwetO5MxJuuouWHYbDs8ziID7aobc1Xl7bXY9w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1uOE6lWlwieaSB_WJasYS4QInmgGhzoI7IBkEvaE1i6Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1xI7eFN_qNULMTKXKPJDqy2NMOKEwxXzwVVYFssx4Ymc=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1dsPUf3IPkbzAvrCI6igrCOGsUpIU0ZhsLjRi3cBEX5s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64NPKOR_AJHnjtCVZZ6wr4YY9XhX0SC6i7Vo0XSPB6Rec=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64uk9mk3hIFnn_dry_nE09z4W5NcbxHimuMhG3bbW71yc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x19TjiSHJmNvJDJFIo547GMKf6zrkfYQmbfCrVJ5POKbw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1F5bvrUNxROQ4jGrjF9VVptKEwb4Ybqa6Z7E8_zh_yJ0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1N2xYK7ugX1feC4MLkOlE8BkBi99sEjIbzlQdmBpGb7o=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_-AgKoIqIQCJ80bkFMTzHg6Mwm224EqwaPEc3-7cUANY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_dS2PaDh5BTe3gYhwgI38pirv5LJEMGhVc5kICSwiuWU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_vd_A3sDVEtN0lItyWfqEniOgVNKoXd--ngJGoe0XsD0=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32Eh-9UGZCAVzmDUad9Odzy_jyK1_0YNezjBcMd_9vP0A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32IGxCNy57TqwDxXBUArldihjn1UfplfJIeO4-EbuqjqA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32ND6Picb7U6UYbiJJSXNngaLsvNLVPSy0Ag5Z76kUKRQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI329-yxOF0l6S7M-Hm5iaztVATEbVRxO6EngR0GMHR3qcI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xa0QwhsjO0Falf4kKTm0NZUnqGWMLMkyKoybanC7lX-M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xb71lEUJ6LZiue0Jyo-6oB-uhQ2WlsAe1gEyrPecWw20=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT10yGeuMyguysl59aZzqnW6Fzh850uOlifkM9u7GEmioI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1JYym88RyZtJUBoLauRUtuUxsv0q_HoX_VNhEZ_IQ5Ow=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1MJgwNy2rXWRgMl8ZkTfbaXNyxOqG_C5qFZAJdRwtmHw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1QqUyK3R_yhaf9aoa97dFmKOUgQa1b0jPqRWdjjSBjgQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1UdYR6XBVGXi_xw8IpxSmf7a6uOWcvRoOM4j7O9a_dfM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1Xo3NUPB8OvanG7eHczDSVFKEoL93lQeSfNPJiOCbqDQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1V2EKkxV_JcOKJYmLn8YaTlTCiEYefbG2vs-FL_h08Is=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1vIlE7GaKf7zvfQXa2QmpzhTqfym9bbdAz9Gah1F3w2M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3OtKNlPhlC6o0wMESExmqt1wBuyz_5JcLot3d4XHfzs4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3mnpjAFE_qJpZU20_R3aA1Na0kIoU5LQnlxWss9uMokg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4n4uzgG6JLOA3yg39EVIzp2FU1mgmxlc-ztoUyFQRKP0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4z2JE5DD-HssCgDWGSJV01rSbyd9gLw7lhafXzk5rXBU=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x168LTz-p2bFCzaNTkBfBJwhAvyoDaBL8uVfnbOmv1v-V4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16OpXtI53qNCWnqM8gRMPELE9nnx3KabCf8jRklN-ngHE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16JIpmPccDH5Q_4j7q97MXKkip57XFERxHl3SAzOuMWCo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16-0bUZGvfekyi85KuOV5xt9Jh3qpaATbZgJot8f9ar1Y=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16n9yvUe3WRF81EO-PIUAKbQi937o09VVHu7xJ4Y8d60Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16Af7iv-_SPc6Up3CUL1R9K-bITilWid8-6Abd_Xh61wo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x161YflyR7mxnqF_IZUDC3MJd7NglmpFKai1ArXpYHppKE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16fFhQRt1qcuzkPaNIoYBLQNvR2eASxLYPp7Kx7uJxtgM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16IjFw8ZvNYb_wo8BVn2HjAPxC54W5m7A89J_EDEiLKJY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x167cL7Yikbpsak0wWx67_9k5CCNYQshG909FLK8YwX7jk=',
      'err': 0,
    }),
  ])
# ---
